syntax = "proto3";

package com.example.grpcexample;

option java_multiple_files = true;
option java_package = "com.example.grpcexample";

service BalanceService {
  rpc getBalance(GetBalanceRequest) returns (GetBalanceResponse) {
  }
  rpc changeBalance(ChangeBalanceRequest) returns (ChangeBalanceResponse) {
  }
}

message GetBalanceRequest {
  int64 userId = 1;
}

message GetBalanceResponse {
  optional int64 amount = 1;
}

message ChangeBalanceRequest {
  int64 userId = 1;
  int64 amount = 2;
}

message ChangeBalanceResponse {}